--- a/first.html
+++ b/first.html
@@ -17,12 +17,22 @@
 
         <ul>
             <li>Absolute positioning</li>
-            <li>Fixed positioning</li>
             <li>Relative positioning</li>
+            <li>Fixed positioning</li>
         </ul>
-        <p> <h2>Absolute positioning</h2></p>
-        <p> <h2>Fixed positioning</h2></p>
-        <p> <h2>Relative positioning</h2></p>
+        <p> <h2>Absolute positioning</h2><br>
+            An element with absolute positioning is removed from the document, and any other
+            elements that are capable will flow into its released space. You can then position the
+            object anywhere you like within the document using the top, right, bottom, and left
+            properties. It will then rest on top of (or behind) other elements.</p>
+            <p> <h2>Relative positioning</h2><br>
+                Likewise, you can move the object relative to the location it would occupy in the normal
+                document flow.</p>
+        <p> <h2>Fixed positioning</h2><br>
+            The final positioning property setting lets you move an object to an absolute location,
+            but only within the current browser viewport. Then, when the document is scrolled,
+            the object remains exactly where it has been placed, with the main document scrolling
+            beneath it—a great way to create dock bars and other similar devices. </p>
     </div>
 </body>
 </html>
